--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Susu Kambing Jantan Muda 'Sangat Terpercaya'</title>
+    <title>Susu Kambing Jantan Muda 'jangan ragu'</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="color-scheme" content="light only" />
