--- a/facebook.html
+++ b/facebook.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ini buat facebook nanti ya ges ya</h1>
+    <h1>facebook ori broh</h1>
 </body>
 </html>
