--- a/instagram.html
+++ b/instagram.html
@@ -6,7 +6,10 @@
     <title>contact-instagram</title>
 </head>
 <body>
-    <h1>hai hallow broh</h1>
-    
+    <h1>ini bagian instragram</h1>
+    <ul>
+        <li>link instragram anda taruh sini</li>
+        <button>press here</button>
+    </ul>
 </body>
 </html>
