mengedit jugua bgian ig dan fb

--- a/instagram.html
+++ b/instagram.html
@@ -6,7 +6,9 @@
     <title>contact-instagram</title>
 </head>
 <body>
-    <h1>hai hallow broh</h1>
-    
+    <h1>masukan form instagram anda</h1>
+    <ul>
+        <li>get start</li>
+    </ul>
 </body>
 </html>
